--- a/common/app/views/commercial/cards/itemLargeCard.scala.html
+++ b/common/app/views/commercial/cards/itemLargeCard.scala.html
@@ -27,7 +27,7 @@
         }
         @if(useCardBranding) {
             @for(branding <- item.branding) {
-                @contentLogo(branding, isInteractivePage = false, isCardBranding = false, isOnTheLeft = false)
+                @contentLogo(branding, isInteractivePage = false, isBranded = false, isOnTheLeft = false)
             }
         }
     </div>
