--- a/static/src/stylesheets/module/commercial/_adverts.scss
+++ b/static/src/stylesheets/module/commercial/_adverts.scss
@@ -683,7 +683,7 @@
     margin-bottom: $gs-row-height + $gs-baseline * 5; //96px = $gs-row-height + height of the logo
 }
 
-.adverts__badge--card-branding {
+.advert--branded {
     position: absolute;
     right: 0;
     bottom: 10px;
