--- a/common/app/views/fragments/containers/facia_cards/standardContainer.scala.html
+++ b/common/app/views/fragments/containers/facia_cards/standardContainer.scala.html
@@ -11,12 +11,12 @@
 
 @if(containerDefinition.index == 0) {
     @for(frontBranding <- frontProperties.branding(Edition(request))) {
-        @contentLogo(frontBranding, isInteractivePage = false, isCardBranding = false, isOnTheLeft = true)
+        @contentLogo(frontBranding, isInteractivePage = false, isBranded = false, isOnTheLeft = true)
     }
 } else {
     @for(containerModel <- maybeContainerModel) {
         @for(containerBranding <- containerModel.branding) {
-            @contentLogo(containerBranding, isInteractivePage = false, isCardBranding = false, isOnTheLeft = true)
+            @contentLogo(containerBranding, isInteractivePage = false, isBranded = false, isOnTheLeft = true)
         }
     }
 }
