js-badge removed

--- a/common/app/views/fragments/commercial/contentLogo.scala.html
+++ b/common/app/views/fragments/commercial/contentLogo.scala.html
@@ -2,7 +2,7 @@
 @import common.commercial.PaidContent
 @import implicits.Requests.RichRequestHeader
 
-<div class="adverts__badge js-badge
+<div class="adverts__badge
     @if(isInteractivePage || isOnTheLeft) {adverts__badge--alt}
     @if(isInteractivePage) {adverts__badge--interactive}
     @if(isBranded) {advert--branded}
