Change classes to use js prefix for selecting and BEM modifiers for hiding and showing

--- a/static/src/javascripts/projects/common/views/ui/notifications-follow-link.html
+++ b/static/src/javascripts/projects/common/views/ui/notifications-follow-link.html
@@ -7,4 +7,4 @@
          <span class="live-notifications__label live-notifications__label--unsubscribed">Receive updates on this story</span>
      <% } %>
  </button>
- <span class="live-notifications__label live-notifications__label--denied">Oops! You need to <a href="https://support.google.com/chrome/answer/3220216">unblock notifications</a> for www.theguardian.com</span>
+ <span class="live-notifications__label js-live-notifications__label--denied live-notifications__label--hidden">Oops! You need to <a href="https://support.google.com/chrome/answer/3220216">unblock notifications</a> for www.theguardian.com</span>
