--- a/static/src/stylesheets/module/preferences/_notifications.scss
+++ b/static/src/stylesheets/module/preferences/_notifications.scss
@@ -34,29 +34,29 @@ $slider-clearence: 3px;
         border-radius: 50%;
         transition: all .3s ease;
     }
+}
 
-    &--unsubscribed {
-        background-color: $neutral-3;
+.live-notifications__slider--unsubscribed {
+    background-color: $neutral-3;
 
-        &:before {
-            left: $slider-clearence;
-        }
-
-        .notifications__toggle:hover & {
-            background-color: $neutral-2;
-        }
+    &:before {
+        left: $slider-clearence;
     }
 
-    &--subscribed {
-        background-color: $live-main-2;
+    .notifications__toggle:hover & {
+        background-color: $neutral-2;
+    }
+}
 
-        &:before {
-            left: $slider-clearence * 7;
-        }
+.live-notifications__slider--subscribed {
+    background-color: $live-main-2;
 
-        .notifications__toggle:hover & {
-            background-color: $live-support-2;
-        }
+    &:before {
+        left: $slider-clearence * 7;
+    }
+
+    .notifications__toggle:hover & {
+        background-color: $live-support-2;
     }
 }
 
