--- a/static/src/stylesheets/module/commercial/_capi.scss
+++ b/static/src/stylesheets/module/commercial/_capi.scss
@@ -201,8 +201,8 @@
         }
     }
 
-    .adverts__badge--alt,
-    .adverts__badge--alt > .adverts__badge__link {
+    .badge--alt,
+    .badge--alt > .badge__link {
         border-color: $neutral-2;
     }
 
