validation error fixed

--- a/static/src/stylesheets/module/commercial/_brandbadge.scss
+++ b/static/src/stylesheets/module/commercial/_brandbadge.scss
@@ -305,7 +305,7 @@
 
     .badge__logo {
         max-height: 6 * $gs-baseline;
-        margin: 0 0 5px 0;
+        margin: 0 0 5px;
     }
 
     > .badge__link {
