--- a/static/src/stylesheets/module/commercial/_brandbadge.scss
+++ b/static/src/stylesheets/module/commercial/_brandbadge.scss
@@ -365,7 +365,7 @@
     }
 }
 
-.advert--card-branding {
+.advert--branded {
     margin-bottom: $gs-row-height + $gs-baseline * 5; //96px = $gs-row-height + height of the logo
 }
 
