Add a CSS class to the youtube iframe to insicate player state - wip

--- a/static/src/stylesheets/module/commercial/glabs/_hosted.scss
+++ b/static/src/stylesheets/module/commercial/glabs/_hosted.scss
@@ -483,6 +483,7 @@ $hosted-video-height: 540px;
     }
 }
 
+.youtube-video-playing + .hosted-fading,
 .vjs-playing + .hosted-fading {
     .hosted__meta,
     .hostedbadge__logo,
@@ -491,6 +492,7 @@ $hosted-video-height: 540px;
     }
 }
 
+.youtube-video-paused + .hosted-fading,
 .vjs-paused + .hosted-fading {
     .hosted__meta,
     .hostedbadge__logo,
