--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -17,10 +17,10 @@
                     </div>
                     <div class="survey-text">
                         <p class="survey-text__strong">
-                            Advertising revenue and direct payments from our reader base are the only ways we can maintain the Guardian in perpetuity.
+                            The ability to display adverts is essential for us, but you're not currently seeing any.
                         </p>
                         <p class="survey-text__strong">
-                            Please choose one of the methods below to continue reading our content.
+                            Please choose how you would prefer to continue reading our content.
                         </p>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="pay-now__close-btn" data-link-name="survey adblock pay-now closed"><%=crossIcon%></div>
                 <div class="survey-buttons">
                     <div class="survey-button__cta paypal" data-link-name="adblock adfree paypal button">Pay with PayPal<%=arrowWhiteRight%></div>
-                    <div class="survey-button__cta ccard" data-link-name="adblock adfree creditcard button">Pay with credit card<%=arrowWhiteRight%></div>
+                    <div class="survey-button__cta ccard" data-link-name="adblock adfree creditcard button">Pay with card<%=arrowWhiteRight%></div>
                 </div>
                 <hr />
                 <div class="survey-buttons">
@@ -103,9 +103,14 @@
             </div>
         </div>
 
-        <div class="survey-text__info">
+        <div class="survey-text__info footer state-1">
             <hr />
-            Already paying?&nbsp;<a class="text-link" href="https://profile.theguardian.com/signin?INTCMP=ADB_RESP_<%=variant%>" data-link-name="adblock supporter <%=variant%>">I am a supporter</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/subscriber-number" data-link-name="adblock subscriber <%=variant%>">I am a subscriber</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/contributor-email" data-link-name="adblock contributor <%=variant%>">I am a contributor</a>
+            <p>
+                Already paying?&nbsp;<a class="text-link" href="https://profile.theguardian.com/signin?INTCMP=ADB_RESP_<%=variant%>" data-link-name="adblock supporter <%=variant%>">I am a supporter</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/subscriber-number" data-link-name="adblock subscriber <%=variant%>">I am a subscriber</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="text-link" href="/commercial/contributor-email" data-link-name="adblock contributor <%=variant%>">I am a contributor</a>
+            </p>
+            <p>
+                If you don't know why you are seeing this message, please <a class="text-link" href="https://www.theguardian.com/help/contact-us?INTCMP=ADB_RESP_<%=variant%>">contact us</a>
+            </p>
         </div>
 
     </div>
