--- a/commercial/app/views/hosted/guardianHostedVideo.scala.html
+++ b/commercial/app/views/hosted/guardianHostedVideo.scala.html
@@ -45,13 +45,13 @@
         <section class="hosted-tone--dark">
             <div class="host hosted__container--full">
                 <div class="u-responsive-ratio u-responsive-ratio--hd">
-                    @if(page.video.youtubeId.isDefined){
-                        <iframe id="hosted-video-@{page.video.youtubeId}"
+                    @page.video.youtubeId.map { youtubeId =>
+                        <iframe id="hosted-video-@youtubeId"
                         class="js-hosted-youtube-video"
-                        src="https://www.youtube.com/embed/@{page.video.youtubeId}?modestbranding=1&showinfo=0&rel=0&enablejsapi=1"
+                        src="https://www.youtube.com/embed/@youtubeId?modestbranding=1&showinfo=0&rel=0&enablejsapi=1&origin=theguardian.com"
                         frameborder="0"
                         allowfullscreen=""></iframe>
-                    } else {
+                    }.getOrElse {
                         <video
                         data-duration="@{page.video.duration}"
                         data-media-id="@{page.video.mediaId}"
