untangle labour and liverpool with explore

--- a/common/app/views/main.scala.html
+++ b/common/app/views/main.scala.html
@@ -59,7 +59,7 @@
             case page: model.ContentPage if (page.item.content.isHeroic) => {
                 <div class="@RenderClasses(Map(
                     ("immersive-header-container", page.item.fields.main.nonEmpty),
-                    ("immersive-header-container--labour-liverpool", page.item.content.tags.isLabourLiverpoolSeries),
+                    ("immersive-header-container--explore-series", page.item.content.tags.isExploreSeries),
                     ("heroic-video-container", page.item.content.elements.hasMainVideo)))">
 
                     @headerAndTopAds(showAdverts, edition)
