--- a/common/app/views/fragments/nav/userAccountLinks.scala.html
+++ b/common/app/views/fragments/nav/userAccountLinks.scala.html
@@ -47,7 +47,8 @@
                     <li class="user-account__signed-in__link">
                         <a href="@Configuration.id.url/password/change"
                         data-link-name="Change password">
-                            Change password</a>
+                            Change password
+                        </a>
                     </li>
                     <li class="user-account__signed-in__link">
                         <a href="@Configuration.id.url/signout"
