--- a/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
+++ b/static/src/stylesheets/layout/_ab-new-header-test-variant.scss
@@ -634,14 +634,15 @@ $navigation-horizontal-padding: $gs-gutter * 2;
     text-transform: none;
 }
 
-//
+// Breathing space between header and content
 @include mq($until: tablet) {
     .has-new-header {
         .weather {
             padding-top: 1px;
         }
 
-        .fc-container--first .fc-container__inner {
+        .fc-container--first .fc-container__inner,
+        .index-page-header {
             padding-top: $gs-baseline / 2 + $gs-baseline / 4;
         }
 
