Better colours. Zero percent version for data checks.

--- a/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
+++ b/static/src/javascripts/projects/common/views/commercial/survey/survey-adblock.html
@@ -92,7 +92,7 @@
             <div class="survey-text__info">
                 <div class="pay-now__close-btn" data-link-name="survey adblock <%=variant%> pay-now closed"><%=crossIcon%></div>
                 <div class="survey-buttons">
-                    <div class="survey-button-rounded__cta pay paypal" data-link-name="adblock adfree <%=variant%> paypal button"><span class="pp-paywith">Pay with</span><%=arrowWhiteRight%></div>
+                    <div class="survey-button-rounded__cta pay paypal" data-link-name="adblock adfree <%=variant%> paypal button"><span class="pp-paywith">Pay with</span><span class="is-hidden">paypal</span><%=arrowWhiteRight%></div>
                     <div class="survey-button-rounded__cta pay ccard" data-link-name="adblock adfree <%=variant%> creditcard button" alt="Pay with debit or credit card">Pay with debit/credit card<%=arrowWhiteRight%></div>
                 </div>
                 <hr />
