--- a/static/src/stylesheets/module/commercial/surveys/_survey.scss
+++ b/static/src/stylesheets/module/commercial/surveys/_survey.scss
@@ -167,7 +167,7 @@
         width: 100%;
         height: 100%;
         padding: $gs-row-height $gs-column-width*.5;
-        background-color: #01558b;
+        background-color: #175789;
         color: #ffffff;
         box-sizing: border-box;
 
@@ -181,7 +181,7 @@
     }
 
     .survey-container.thank-you {
-        background-color: #3e3e3e;
+        background-color: #3e3d3d;
     }
 
     .survey-logo {
@@ -317,24 +317,24 @@
             position: relative;
             cursor: pointer;
             margin-top: 10px;
-            background-color: #2e8b3a;
+            background-color: #2d8b3a;
             top: 25%;
             height: 50%;
             width: 250px;
         }
         .survey-button-rounded__cta:hover {
-            background-color: #77a809;
+            background-color: #3f9d4c;
         }
 
         .survey-button-rounded__cta.pay {
             .pp-paywith {
                 margin-left: 35px;
             }
-            background-color: #dba500;
+            background-color: #f5a623;
         }
 
         .survey-button-rounded__cta.pay:hover {
-            background-color: #77a809;
+            background-color: #f4b906;
         }
 
         .survey-button-rounded__cta.pay.paypal {
