--- a/static/src/stylesheets/module/commercial/_brandbadge.scss
+++ b/static/src/stylesheets/module/commercial/_brandbadge.scss
@@ -282,9 +282,8 @@
 }
 
 .badge--alt {
-    float: left;
-    clear: left;
-    border-top: 1px dotted $neutral-5;
+    float: none;
+    border-top: 0;
     margin-top: $gs-baseline / 3;
     padding-top: $gs-baseline / 6;
     text-align: left;
@@ -292,6 +291,9 @@
 
     @include mq(leftCol) {
         width: $left-column;
+        float: left;
+        clear: left;
+        border-top: 1px dotted $neutral-5;
     }
 
     @include mq(wide) {
@@ -317,6 +319,16 @@
         @include font-size(11);
         color: $paid-article-icon;
         font-weight: normal;
+    }
+}
+
+.fc-container {
+    .badge--alt {
+        @include mq(tablet) {
+            float: left;
+            clear: left;
+            border-top: 1px dotted $neutral-5;
+        }
     }
 }
 
