--- a/static/src/stylesheets/module/signup/_newsletters.scss
+++ b/static/src/stylesheets/module/signup/_newsletters.scss
@@ -13,13 +13,15 @@
 }
 
 .newsletter-card__example {
+    display: inline;
+    float: right;
 
     .newsletter-card__lozenge {
         color: $news-main-1;
         border-color: $news-main-1;
         -webkit-border-radius: 62.5rem;
         border-radius: 100px;
-        height: 2.8em;
+        height: 2rem;
         width: 6rem;
         margin: 0;
 
@@ -83,16 +85,22 @@
 }
 
 .newsletter-card__content {
+    @include fs-bodyCopy(2);
     padding: .5rem;
-    height: 8.5rem;
+    height: 5.5rem;
 
     @include mq(tablet) {
         height: 8.5rem;
     }
 
     @include mq(desktop) {
-        height: 11.5rem;
+        height: 8rem;
     }
+}
+
+.newsletter-card__meta {
+    padding: .5rem;
+    height: 2rem;
 }
 
 .newsletter-card__preview {
@@ -111,8 +119,8 @@
 
 .newsletter-card__frequency {
     @include fs-textSans(2);
-    padding: 1rem 0;
     color: $neutral-2;
+    display: inline;
 
     .inline-icon {
         fill: $neutral-2;
