missed a couple of references to heroic

--- a/static/src/stylesheets/inline/article-explore.scss
+++ b/static/src/stylesheets/inline/article-explore.scss
@@ -19,7 +19,7 @@ $explore-series-header-element-opacity: .85;
         }
     }
     //firefox fix for the height of the video
-    &.heroic-video-container {
+    &.explore-video-container {
         min-height: 548px;
 
         @include mq($until: desktop) {
@@ -49,7 +49,7 @@ $explore-series-header-element-opacity: .85;
     padding-top: $gs-baseline;
 }
 
-.content--explore-series.heroic--video .content__article-body {
+.content--explore-series.explore--video .content__article-body {
     padding: 0px;
     @include mq($from: tablet) {
         padding-top: 40px;
@@ -57,7 +57,7 @@ $explore-series-header-element-opacity: .85;
 }
 
 .content--explore-series-article {
-    &.heroic--video {
+    &.explore--video {
         min-height: 0rem;
 
         @include mq($from: mobileLandscape) {
@@ -74,7 +74,7 @@ $explore-series-header-element-opacity: .85;
     }
 }
 
-.heroic--video {
+.explore--video {
     .explore-series-headline {
         top: 220px;
 
