--- a/article/app/views/fragments/articleBodyExplore.scala.html
+++ b/article/app/views/fragments/articleBodyExplore.scala.html
@@ -7,12 +7,12 @@
 @import views.support.{ImgSrc, Item140}
 
 @defining(model.article) { article =>
-    <div class="l-side-margins @if(article.content.elements.hasMainVideo){heroic--video}">
+    <div class="l-side-margins @if(article.content.elements.hasMainVideo){explore--video}">
         <article id="article" data-test-id="article-root"
             class="@RenderClasses(Map(
                     "content content--article" -> true,
                     "content--explore-series" -> article.content.tags.isExploreSeries,
-                    "heroic--video" -> article.content.elements.hasMainVideo
+                    "explore--video" -> article.content.elements.hasMainVideo
                 ))"
 
             itemscope itemtype="@article.metadata.schemaType" role="main">
