heroic-immersive now explore

--- a/static/src/stylesheets/inline/article-explore.scss
+++ b/static/src/stylesheets/inline/article-explore.scss
@@ -6,7 +6,7 @@ $explore-series-header-element-opacity: .85;
     min-height: gs-height(8);
 
     //if immersive switch is on it gets given this class so we can still have a full screen image
-    &.heroic-immersive {
+    &.explore-immersive {
         min-height: 100vh;
     }
 
@@ -100,7 +100,7 @@ $explore-series-header-element-opacity: .85;
     }
 }
 
-.heroic-immersive .explore-series-headline {
+.explore-immersive .explore-series-headline {
     top: auto;
     bottom: 122px;
     position: absolute;
