--- a/common/app/views/fragments/nav/userAccountLinks.scala.html
+++ b/common/app/views/fragments/nav/userAccountLinks.scala.html
@@ -6,7 +6,7 @@
 @if(IdentityProfileNavigationSwitch.isSwitchedOn) {
 
     <li class="navigation-group__item navigation-group__item--user-account js-show-user-account-links">
-        @fragments.inlineSvg("profile-36", "icon", List("navigation-group__icon", "navigation-group__user-icon", "navigation-group__profile-icon"))
+        @fragments.inlineSvg("profile", "icon", List("navigation-group__icon", "navigation-group__user-icon", "navigation-group__profile-icon"))
 
         <div class="user-account__login">
             <a href="@Configuration.id.url/signin?INTCMP=DOTCOM_HEADER_SIGNIN">
